// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`containers/LogFace extended filters work correctly for Nutrition: risk filter 1`] = `
<select
  data-testid="select"
  onChange={[Function]}
>
  <option
    key="stunting"
    value="stunting"
  >
    Stunting
  </option>
  <option
    key="wasting"
    value="wasting"
  >
    Wasting
  </option>
  <option
    key="overweight"
    value="overweight"
  >
    Overweight
  </option>
  <option
    key="inappropriateFeeding"
    value="inappropriateFeeding"
  >
    Inappropriate Feeding
  </option>
  <option
    key="underweight"
    value="underweight"
  >
    Underweight
  </option>
  <option
    key="normal"
    value="normal"
  >
    normal
  </option>
</select>
`;

exports[`containers/LogFace extended filters work correctly for Nutrition: smsType filter 1`] = `
<select
  data-testid="select"
  onChange={[Function]}
>
  <option
    key="Response Report"
    value="Response Report"
  >
    Response Report
  </option>
  <option
    key="Red Alert Report"
    value="Red Alert Report"
  >
    Red Alert Report
  </option>
  <option
    key="Social Determinants"
    value="Social Determinants"
  >
    Social Determinants
  </option>
  <option
    key="ANC Visit"
    value="ANC Visit"
  >
    ANC Visit
  </option>
  <option
    key="Delivery Planning"
    value="Delivery Planning"
  >
    Delivery Planning
  </option>
  <option
    key="Pregnancy Detection"
    value="Pregnancy Detection"
  >
    Pregnancy Detection
  </option>
  <option
    key="Pregnancy Identification"
    value="Pregnancy Identification"
  >
    Pregnancy Identification
  </option>
  <option
    key="Pregnancy Registration"
    value="Pregnancy Registration"
  >
    Pregnancy Registration
  </option>
  <option
    key="ANC Report"
    value="ANC Report"
  >
    ANC Report
  </option>
  <option
    key="Home Visit Report"
    value="Home Visit Report"
  >
    Home Visit Report
  </option>
  <option
    key="Birth Report"
    value="Birth Report"
  >
    Birth Report
  </option>
  <option
    key="Death Report"
    value="Death Report"
  >
    Death Report
  </option>
  <option
    key="Postnatal and Newborn Care"
    value="Postnatal and Newborn Care"
  >
    Postnatal and Newborn Care
  </option>
  <option
    key="Nutrition Registration"
    value="Nutrition Registration"
  >
    Nutrition Registration
  </option>
  <option
    key="Nutrition Report"
    value="Nutrition Report"
  >
    Nutrition Report
  </option>
  <option
    key="Monthly Nutrition Report"
    value="Monthly Nutrition Report"
  >
    Monthly Nutrition Report
  </option>
  <option
    key="Departure Code"
    value="Departure Code"
  >
    Departure Code
  </option>
  <option
    key="Refusal Report"
    value="Refusal Report"
  >
    Refusal Report
  </option>
  <option
    key="Account Check"
    value="Account Check"
  >
    Account Check
  </option>
</select>
`;

exports[`containers/LogFace extended filters work correctly for pregnancy: location filter 1`] = `
<select
  data-testid="select"
  onChange={[Function]}
>
  <option
    key="c8054fa5-2d63-4cb5-bc52-173a4eb367fd"
    value="c8054fa5-2d63-4cb5-bc52-173a4eb367fd"
  >
    Gia Lai
  </option>
  <option
    key="1b8b7a76-15e1-446b-9d1e-c8cc97777a28"
    value="1b8b7a76-15e1-446b-9d1e-c8cc97777a28"
  >
    Điện Biên
  </option>
  <option
    key="eccfe905-0e03-4188-98bc-22f141cccd0e"
    value="eccfe905-0e03-4188-98bc-22f141cccd0e"
  >
    Kon Tum
  </option>
</select>
`;

exports[`containers/LogFace extended filters work correctly for pregnancy: risk filter 1`] = `
<select
  data-testid="select"
  onChange={[Function]}
>
  <option
    key="risk"
    value="risk"
  >
    Risk
  </option>
  <option
    key="redAlert"
    value="redAlert"
  >
    Red alert
  </option>
  <option
    key="noRisk"
    value="noRisk"
  >
    No risk
  </option>
</select>
`;

exports[`containers/LogFace extended renders correctly 1`] = `
<li
  className="page-item disabled page-item"
>
  <PaginationLink
    aria-label="first"
    className="page-link"
    href="#"
    onClick={[Function]}
    tag="a"
  >
    <a
      aria-label="first"
      className="page-link page-link"
      href="#"
      onClick={[Function]}
    >
      <span
        aria-hidden="true"
      >
        first
      </span>
      <span
        className="sr-only"
      >
        first
      </span>
    </a>
  </PaginationLink>
</li>
`;

exports[`containers/LogFace extended renders correctly 2`] = `
<li
  className="page-item disabled page-item"
>
  <PaginationLink
    aria-label="previous"
    className="page-link"
    href="#"
    onClick={[Function]}
    tag="a"
  >
    <a
      aria-label="previous"
      className="page-link page-link"
      href="#"
      onClick={[Function]}
    >
      <span
        aria-hidden="true"
      >
        previous
      </span>
      <span
        className="sr-only"
      >
        previous
      </span>
    </a>
  </PaginationLink>
</li>
`;

exports[`containers/LogFace extended renders correctly 3`] = `
<li
  className="page-item  active page-item"
>
  <PaginationLink
    className="page-link"
    href="#"
    onClick={[Function]}
    tag="a"
  >
    <a
      className="page-link page-link"
      href="#"
      onClick={[Function]}
    >
      1
    </a>
  </PaginationLink>
</li>
`;

exports[`containers/LogFace extended renders correctly 4`] = `
<li
  className="page-item  page-item"
>
  <PaginationLink
    className="page-link"
    href="#"
    onClick={[Function]}
    tag="a"
  >
    <a
      className="page-link page-link"
      href="#"
      onClick={[Function]}
    >
      2
    </a>
  </PaginationLink>
</li>
`;

exports[`containers/LogFace extended renders correctly 5`] = `
<li
  className="page-item  page-item"
>
  <PaginationLink
    className="page-link"
    href="#"
    onClick={[Function]}
    tag="a"
  >
    <a
      className="page-link page-link"
      href="#"
      onClick={[Function]}
    >
      3
    </a>
  </PaginationLink>
</li>
`;

exports[`containers/LogFace extended renders correctly 6`] = `
<li
  className="page-item  page-item"
>
  <PaginationLink
    className="page-link"
    href="#"
    onClick={[Function]}
    tag="a"
  >
    <a
      className="page-link page-link"
      href="#"
      onClick={[Function]}
    >
      4
    </a>
  </PaginationLink>
</li>
`;

exports[`containers/LogFace extended renders correctly 7`] = `
<li
  className="page-item   page-item"
>
  <PaginationLink
    aria-label="next"
    className="page-link"
    href="#"
    onClick={[Function]}
    tag="a"
  >
    <a
      aria-label="next"
      className="page-link page-link"
      href="#"
      onClick={[Function]}
    >
      <span
        aria-hidden="true"
      >
        next
      </span>
      <span
        className="sr-only"
      >
        next
      </span>
    </a>
  </PaginationLink>
</li>
`;

exports[`containers/LogFace extended renders correctly 8`] = `
<li
  className="page-item  page-item"
>
  <PaginationLink
    aria-label="last"
    className="page-link "
    href="#"
    onClick={[Function]}
    tag="a"
  >
    <a
      aria-label="last"
      className="page-link  page-link"
      href="#"
      onClick={[Function]}
    >
      <span
        aria-hidden="true"
      >
        last
      </span>
      <span
        className="sr-only"
      >
        last
      </span>
    </a>
  </PaginationLink>
</li>
`;

exports[`containers/LogFace extended renders correctly: logface title 1`] = `
<h2
  id="logface_title"
>
  Log Face - Pregnancy
</h2>
`;

exports[`containers/LogFace extended renders correctly: search div 1`] = `
<input
  className="form-control logface-search"
  id="search"
  name="input"
  onChange={[Function]}
  placeholder="Search ID, Reporter, Patients"
  type="text"
/>
`;

exports[`containers/LogFace extended renders correctly: table snapshot 1`] = `
<table
  className="table table-borderless table-striped"
>
  <thead
    id="header"
  >
    <tr>
      <th
        className="default-width"
      >
        Event Date
      </th>
      <th
        className="default-width"
      >
        Location
      </th>
      <th
        className="default-width"
      >
        SMS Type
      </th>
      <th
        className="default-width"
      >
        Reporter
      </th>
      <th
        className="default-width"
      >
        Patient
      </th>
      <th
        className="small-width"
      >
        Age
      </th>
      <th
        className="large-width"
      >
        Message
      </th>
      <th
        className="default-width"
      >
        Risk Level
      </th>
    </tr>
  </thead>
  <tbody
    id="body"
  >
    <tr
      key="1620735372533"
    >
      <td
        className="default-width"
      >
        11/05/2021
      </td>
      <td
        className="default-width"
      >
        Đăk Tờ Re
      </td>
      <td
        className="default-width"
      >
        Pregnancy Registration
      </td>
      <td
        className="default-width"
      >
        Husna Hariz
      </td>
      <td
        className="default-width"
      >
        <Link
          to="#"
        >
          <LinkAnchor
            href="/pregnancy_log_face"
            navigate={[Function]}
          >
            <a
              href="/pregnancy_log_face"
              onClick={[Function]}
            >
              101C71
            </a>
          </LinkAnchor>
        </Link>
      </td>
      <td
        className="small-width"
      >
        31 years
      </td>
      <td
        className="large-width"
      >
        <ul>
          <li
            key="EDD : 07/09/2021-0"
          >
            EDD : 07/09/2021
          </li>
          <li
            key="Gravidity : 2-1"
          >
            Gravidity : 2
          </li>
          <li
            key="Parity : 1-2"
          >
            Parity : 1
          </li>
          <li
            key="Weight : 50.4kg-3"
          >
            Weight : 50.4kg
          </li>
          <li
            key="Height : 123cm-4"
          >
            Height : 123cm
          </li>
          <li
            key="BMI : 33.31350386674598-5"
          >
            BMI : 33.31350386674598
          </li>
          <li
            key="Previous Gynaecology History : No Previous Risks / No preexisting conditions-6"
          >
            Previous Gynaecology History : No Previous Risks / No preexisting conditions
          </li>
          <li
            key="Current Symptoms : Bu00ecnh thu01b0u1eddng, Coughing-7"
          >
            Current Symptoms : Bu00ecnh thu01b0u1eddng, Coughing
          </li>
        </ul>
      </td>
      <td
        className="default-width"
      >
        <Link
          to="#"
        >
          <LinkAnchor
            href="/pregnancy_log_face"
            navigate={[Function]}
          >
            <a
              href="/pregnancy_log_face"
              onClick={[Function]}
            >
              <RiskColoring
                displayValue="low"
                risk="low"
              >
                <span
                  className="badge"
                  style={
                    Object {
                      "backgroundColor": "#ffc107",
                    }
                  }
                >
                  <div>
                    <p>
                      low
                    </p>
                  </div>
                </span>
              </RiskColoring>
            </a>
          </LinkAnchor>
        </Link>
      </td>
    </tr>
    <tr
      key="1620735118150"
    >
      <td
        className="default-width"
      >
        11/05/2021
      </td>
      <td
        className="default-width"
      >
        Đăk Tờ Re
      </td>
      <td
        className="default-width"
      >
        Pregnancy Detection
      </td>
      <td
        className="default-width"
      >
        Husna Hariz
      </td>
      <td
        className="default-width"
      >
        <Link
          to="#"
        >
          <LinkAnchor
            href="/pregnancy_log_face"
            navigate={[Function]}
          >
            <a
              href="/pregnancy_log_face"
              onClick={[Function]}
            >
              101C71
            </a>
          </LinkAnchor>
        </Link>
      </td>
      <td
        className="small-width"
      >
        31 years
      </td>
      <td
        className="large-width"
      >
        <ul>
          <li
            key="Name : BENT SENT  BRAND-0"
          >
            Name : BENT SENT  BRAND
          </li>
          <li
            key="Phone Number : 0912734510-1"
          >
            Phone Number : 0912734510
          </li>
          <li
            key="Health Insurance : KCO-2"
          >
            Health Insurance : KCO
          </li>
        </ul>
      </td>
      <td
        className="default-width"
      >
        <Link
          to="#"
        >
          <LinkAnchor
            href="/pregnancy_log_face"
            navigate={[Function]}
          >
            <a
              href="/pregnancy_log_face"
              onClick={[Function]}
            >
              <RiskColoring
                displayValue="Not Set"
                risk=" NULL"
              >
                <span
                  className="badge"
                  style={
                    Object {
                      "backgroundColor": "#6c757d",
                    }
                  }
                >
                  <div>
                    <p>
                      Not Set
                    </p>
                  </div>
                </span>
              </RiskColoring>
            </a>
          </LinkAnchor>
        </Link>
      </td>
    </tr>
    <tr
      key="1620714162793"
    >
      <td
        className="default-width"
      >
        06/05/2021
      </td>
      <td
        className="default-width"
      >
        Thôn Kon Hia 1
      </td>
      <td
        className="default-width"
      >
        Social Determinants
      </td>
      <td
        className="default-width"
      >
        Husna Hariz
      </td>
      <td
        className="default-width"
      >
        <Link
          to="#"
        >
          <LinkAnchor
            href="/pregnancy_log_face"
            navigate={[Function]}
          >
            <a
              href="/pregnancy_log_face"
              onClick={[Function]}
            >
              1004R7
            </a>
          </LinkAnchor>
        </Link>
      </td>
      <td
        className="small-width"
      >
        30 years
      </td>
      <td
        className="large-width"
      >
        <ul>
          <li
            key="Planned Delivery Location : Bu1ec7nh viu1ec7n tu1ec9nh hou1eb7c Bu1ec7nh viu1ec7n Trung u01afu01a1ng-0"
          >
            Planned Delivery Location : Bu1ec7nh viu1ec7n tu1ec9nh hou1eb7c Bu1ec7nh viu1ec7n Trung u01afu01a1ng
          </li>
          <li
            key="Household : Not a poor householes-1"
          >
            Household : Not a poor householes
          </li>
          <li
            key="Ethnicity : H'MONG-2"
          >
            Ethnicity : H'MONG
          </li>
          <li
            key="Toilet : Has toilet-3"
          >
            Toilet : Has toilet
          </li>
          <li
            key="Handwashing : Has Handwashing facilities with soap-4"
          >
            Handwashing : Has Handwashing facilities with soap
          </li>
        </ul>
      </td>
      <td
        className="default-width"
      >
        <Link
          to="#"
        >
          <LinkAnchor
            href="/pregnancy_log_face"
            navigate={[Function]}
          >
            <a
              href="/pregnancy_log_face"
              onClick={[Function]}
            >
              <RiskColoring
                displayValue="Not Set"
                risk=" NULL"
              >
                <span
                  className="badge"
                  style={
                    Object {
                      "backgroundColor": "#6c757d",
                    }
                  }
                >
                  <div>
                    <p>
                      Not Set
                    </p>
                  </div>
                </span>
              </RiskColoring>
            </a>
          </LinkAnchor>
        </Link>
      </td>
    </tr>
    <tr
      key="1619536744760"
    >
      <td
        className="default-width"
      >
        27/04/2021
      </td>
      <td
        className="default-width"
      >
        Thôn Kon Hia 1
      </td>
      <td
        className="default-width"
      >
        Social Determinants
      </td>
      <td
        className="default-width"
      >
        Husna Hariz
      </td>
      <td
        className="default-width"
      >
        <Link
          to="#"
        >
          <LinkAnchor
            href="/pregnancy_log_face"
            navigate={[Function]}
          >
            <a
              href="/pregnancy_log_face"
              onClick={[Function]}
            >
              1004R7
            </a>
          </LinkAnchor>
        </Link>
      </td>
      <td
        className="small-width"
      >
        30 years
      </td>
      <td
        className="large-width"
      >
        <ul>
          <li
            key="Planned Delivery Location : Bu1ec7nh viu1ec7n tu1ec9nh hou1eb7c Bu1ec7nh viu1ec7n Trung u01afu01a1ng-0"
          >
            Planned Delivery Location : Bu1ec7nh viu1ec7n tu1ec9nh hou1eb7c Bu1ec7nh viu1ec7n Trung u01afu01a1ng
          </li>
          <li
            key="Household : Not a poor householes-1"
          >
            Household : Not a poor householes
          </li>
          <li
            key="Ethnicity : H'MONG-2"
          >
            Ethnicity : H'MONG
          </li>
          <li
            key="Toilet : Has toilet-3"
          >
            Toilet : Has toilet
          </li>
          <li
            key="Handwashing : Has Handwashing facilities with soap-4"
          >
            Handwashing : Has Handwashing facilities with soap
          </li>
        </ul>
      </td>
      <td
        className="default-width"
      >
        <Link
          to="#"
        >
          <LinkAnchor
            href="/pregnancy_log_face"
            navigate={[Function]}
          >
            <a
              href="/pregnancy_log_face"
              onClick={[Function]}
            >
              <RiskColoring
                displayValue="Not Set"
                risk=" NULL"
              >
                <span
                  className="badge"
                  style={
                    Object {
                      "backgroundColor": "#6c757d",
                    }
                  }
                >
                  <div>
                    <p>
                      Not Set
                    </p>
                  </div>
                </span>
              </RiskColoring>
            </a>
          </LinkAnchor>
        </Link>
      </td>
    </tr>
    <tr
      key="1619516350470"
    >
      <td
        className="default-width"
      >
        27/04/2021
      </td>
      <td
        className="default-width"
      >
        Đăk Tờ Re
      </td>
      <td
        className="default-width"
      >
        Pregnancy Detection
      </td>
      <td
        className="default-width"
      >
        Husna Hariz
      </td>
      <td
        className="default-width"
      >
        <Link
          to="#"
        >
          <LinkAnchor
            href="/pregnancy_log_face"
            navigate={[Function]}
          >
            <a
              href="/pregnancy_log_face"
              onClick={[Function]}
            >
              101C63
            </a>
          </LinkAnchor>
        </Link>
      </td>
      <td
        className="small-width"
      >
        34 years
      </td>
      <td
        className="large-width"
      >
        <ul>
          <li
            key="Name : BENT SENT  BRAND-0"
          >
            Name : BENT SENT  BRAND
          </li>
          <li
            key="Phone Number : 0912785510-1"
          >
            Phone Number : 0912785510
          </li>
          <li
            key="Health Insurance : KCO-2"
          >
            Health Insurance : KCO
          </li>
        </ul>
      </td>
      <td
        className="default-width"
      >
        <Link
          to="#"
        >
          <LinkAnchor
            href="/pregnancy_log_face"
            navigate={[Function]}
          >
            <a
              href="/pregnancy_log_face"
              onClick={[Function]}
            >
              <RiskColoring
                displayValue="Not Set"
                risk=" NULL"
              >
                <span
                  className="badge"
                  style={
                    Object {
                      "backgroundColor": "#6c757d",
                    }
                  }
                >
                  <div>
                    <p>
                      Not Set
                    </p>
                  </div>
                </span>
              </RiskColoring>
            </a>
          </LinkAnchor>
        </Link>
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`containers/LogFace extended renders correctly: tables 1`] = `
<td
  className="default-width"
>
  11/05/2021
</td>
`;

exports[`containers/LogFace extended renders correctly: tables 2`] = `
<td
  className="default-width"
>
  Đăk Tờ Re
</td>
`;

exports[`containers/LogFace extended renders correctly: tables 3`] = `
<td
  className="default-width"
>
  Pregnancy Registration
</td>
`;

exports[`containers/LogFace extended renders correctly: tables 4`] = `
<td
  className="default-width"
>
  Husna Hariz
</td>
`;

exports[`containers/LogFace extended renders correctly: tables 5`] = `
<td
  className="default-width"
>
  <Link
    to="#"
  >
    <LinkAnchor
      href="/pregnancy_log_face"
      navigate={[Function]}
    >
      <a
        href="/pregnancy_log_face"
        onClick={[Function]}
      >
        101C71
      </a>
    </LinkAnchor>
  </Link>
</td>
`;

exports[`containers/LogFace extended renders correctly: tables 6`] = `
<td
  className="small-width"
>
  31 years
</td>
`;

exports[`containers/LogFace extended renders correctly: tables 7`] = `
<td
  className="large-width"
>
  <ul>
    <li
      key="EDD : 07/09/2021-0"
    >
      EDD : 07/09/2021
    </li>
    <li
      key="Gravidity : 2-1"
    >
      Gravidity : 2
    </li>
    <li
      key="Parity : 1-2"
    >
      Parity : 1
    </li>
    <li
      key="Weight : 50.4kg-3"
    >
      Weight : 50.4kg
    </li>
    <li
      key="Height : 123cm-4"
    >
      Height : 123cm
    </li>
    <li
      key="BMI : 33.31350386674598-5"
    >
      BMI : 33.31350386674598
    </li>
    <li
      key="Previous Gynaecology History : No Previous Risks / No preexisting conditions-6"
    >
      Previous Gynaecology History : No Previous Risks / No preexisting conditions
    </li>
    <li
      key="Current Symptoms : Bu00ecnh thu01b0u1eddng, Coughing-7"
    >
      Current Symptoms : Bu00ecnh thu01b0u1eddng, Coughing
    </li>
  </ul>
</td>
`;

exports[`containers/LogFace extended renders correctly: tables 8`] = `
<td
  className="default-width"
>
  <Link
    to="#"
  >
    <LinkAnchor
      href="/pregnancy_log_face"
      navigate={[Function]}
    >
      <a
        href="/pregnancy_log_face"
        onClick={[Function]}
      >
        <RiskColoring
          displayValue="low"
          risk="low"
        >
          <span
            className="badge"
            style={
              Object {
                "backgroundColor": "#ffc107",
              }
            }
          >
            <div>
              <p>
                low
              </p>
            </div>
          </span>
        </RiskColoring>
      </a>
    </LinkAnchor>
  </Link>
</td>
`;

exports[`containers/LogFace extended renders correctly: tables 9`] = `
<td
  className="default-width"
>
  11/05/2021
</td>
`;

exports[`containers/LogFace extended renders correctly: tables 10`] = `
<td
  className="default-width"
>
  Đăk Tờ Re
</td>
`;

exports[`containers/LogFace extended renders correctly: tables 11`] = `
<td
  className="default-width"
>
  Pregnancy Detection
</td>
`;

exports[`containers/LogFace extended renders correctly: tables 12`] = `
<td
  className="default-width"
>
  Husna Hariz
</td>
`;

exports[`containers/LogFace extended renders correctly: tables 13`] = `
<td
  className="default-width"
>
  <Link
    to="#"
  >
    <LinkAnchor
      href="/pregnancy_log_face"
      navigate={[Function]}
    >
      <a
        href="/pregnancy_log_face"
        onClick={[Function]}
      >
        101C71
      </a>
    </LinkAnchor>
  </Link>
</td>
`;

exports[`containers/LogFace extended renders correctly: tables 14`] = `
<td
  className="small-width"
>
  31 years
</td>
`;

exports[`containers/LogFace extended renders correctly: tables 15`] = `
<td
  className="large-width"
>
  <ul>
    <li
      key="Name : BENT SENT  BRAND-0"
    >
      Name : BENT SENT  BRAND
    </li>
    <li
      key="Phone Number : 0912734510-1"
    >
      Phone Number : 0912734510
    </li>
    <li
      key="Health Insurance : KCO-2"
    >
      Health Insurance : KCO
    </li>
  </ul>
</td>
`;

exports[`containers/LogFace extended renders correctly: tables 16`] = `
<td
  className="default-width"
>
  <Link
    to="#"
  >
    <LinkAnchor
      href="/pregnancy_log_face"
      navigate={[Function]}
    >
      <a
        href="/pregnancy_log_face"
        onClick={[Function]}
      >
        <RiskColoring
          displayValue="Not Set"
          risk=" NULL"
        >
          <span
            className="badge"
            style={
              Object {
                "backgroundColor": "#6c757d",
              }
            }
          >
            <div>
              <p>
                Not Set
              </p>
            </div>
          </span>
        </RiskColoring>
      </a>
    </LinkAnchor>
  </Link>
</td>
`;

exports[`containers/LogFace extended renders correctly: tables 17`] = `
<td
  className="default-width"
>
  06/05/2021
</td>
`;

exports[`containers/LogFace extended renders correctly: tables 18`] = `
<td
  className="default-width"
>
  Thôn Kon Hia 1
</td>
`;

exports[`containers/LogFace extended renders correctly: tables 19`] = `
<td
  className="default-width"
>
  Social Determinants
</td>
`;

exports[`containers/LogFace extended renders correctly: tables 20`] = `
<td
  className="default-width"
>
  Husna Hariz
</td>
`;

exports[`containers/LogFace extended renders correctly: tables 21`] = `
<td
  className="default-width"
>
  <Link
    to="#"
  >
    <LinkAnchor
      href="/pregnancy_log_face"
      navigate={[Function]}
    >
      <a
        href="/pregnancy_log_face"
        onClick={[Function]}
      >
        1004R7
      </a>
    </LinkAnchor>
  </Link>
</td>
`;

exports[`containers/LogFace extended renders correctly: tables 22`] = `
<td
  className="small-width"
>
  30 years
</td>
`;

exports[`containers/LogFace extended renders correctly: tables 23`] = `
<td
  className="large-width"
>
  <ul>
    <li
      key="Planned Delivery Location : Bu1ec7nh viu1ec7n tu1ec9nh hou1eb7c Bu1ec7nh viu1ec7n Trung u01afu01a1ng-0"
    >
      Planned Delivery Location : Bu1ec7nh viu1ec7n tu1ec9nh hou1eb7c Bu1ec7nh viu1ec7n Trung u01afu01a1ng
    </li>
    <li
      key="Household : Not a poor householes-1"
    >
      Household : Not a poor householes
    </li>
    <li
      key="Ethnicity : H'MONG-2"
    >
      Ethnicity : H'MONG
    </li>
    <li
      key="Toilet : Has toilet-3"
    >
      Toilet : Has toilet
    </li>
    <li
      key="Handwashing : Has Handwashing facilities with soap-4"
    >
      Handwashing : Has Handwashing facilities with soap
    </li>
  </ul>
</td>
`;

exports[`containers/LogFace extended renders correctly: tables 24`] = `
<td
  className="default-width"
>
  <Link
    to="#"
  >
    <LinkAnchor
      href="/pregnancy_log_face"
      navigate={[Function]}
    >
      <a
        href="/pregnancy_log_face"
        onClick={[Function]}
      >
        <RiskColoring
          displayValue="Not Set"
          risk=" NULL"
        >
          <span
            className="badge"
            style={
              Object {
                "backgroundColor": "#6c757d",
              }
            }
          >
            <div>
              <p>
                Not Set
              </p>
            </div>
          </span>
        </RiskColoring>
      </a>
    </LinkAnchor>
  </Link>
</td>
`;

exports[`containers/LogFace extended renders correctly: tables 25`] = `
<td
  className="default-width"
>
  27/04/2021
</td>
`;

exports[`containers/LogFace extended renders correctly: tables 26`] = `
<td
  className="default-width"
>
  Thôn Kon Hia 1
</td>
`;

exports[`containers/LogFace extended renders correctly: tables 27`] = `
<td
  className="default-width"
>
  Social Determinants
</td>
`;

exports[`containers/LogFace extended renders correctly: tables 28`] = `
<td
  className="default-width"
>
  Husna Hariz
</td>
`;

exports[`containers/LogFace extended renders correctly: tables 29`] = `
<td
  className="default-width"
>
  <Link
    to="#"
  >
    <LinkAnchor
      href="/pregnancy_log_face"
      navigate={[Function]}
    >
      <a
        href="/pregnancy_log_face"
        onClick={[Function]}
      >
        1004R7
      </a>
    </LinkAnchor>
  </Link>
</td>
`;

exports[`containers/LogFace extended renders correctly: tables 30`] = `
<td
  className="small-width"
>
  30 years
</td>
`;

exports[`containers/LogFace extended renders correctly: tables 31`] = `
<td
  className="large-width"
>
  <ul>
    <li
      key="Planned Delivery Location : Bu1ec7nh viu1ec7n tu1ec9nh hou1eb7c Bu1ec7nh viu1ec7n Trung u01afu01a1ng-0"
    >
      Planned Delivery Location : Bu1ec7nh viu1ec7n tu1ec9nh hou1eb7c Bu1ec7nh viu1ec7n Trung u01afu01a1ng
    </li>
    <li
      key="Household : Not a poor householes-1"
    >
      Household : Not a poor householes
    </li>
    <li
      key="Ethnicity : H'MONG-2"
    >
      Ethnicity : H'MONG
    </li>
    <li
      key="Toilet : Has toilet-3"
    >
      Toilet : Has toilet
    </li>
    <li
      key="Handwashing : Has Handwashing facilities with soap-4"
    >
      Handwashing : Has Handwashing facilities with soap
    </li>
  </ul>
</td>
`;

exports[`containers/LogFace extended renders correctly: tables 32`] = `
<td
  className="default-width"
>
  <Link
    to="#"
  >
    <LinkAnchor
      href="/pregnancy_log_face"
      navigate={[Function]}
    >
      <a
        href="/pregnancy_log_face"
        onClick={[Function]}
      >
        <RiskColoring
          displayValue="Not Set"
          risk=" NULL"
        >
          <span
            className="badge"
            style={
              Object {
                "backgroundColor": "#6c757d",
              }
            }
          >
            <div>
              <p>
                Not Set
              </p>
            </div>
          </span>
        </RiskColoring>
      </a>
    </LinkAnchor>
  </Link>
</td>
`;

exports[`containers/LogFace extended renders correctly: tables 33`] = `
<td
  className="default-width"
>
  27/04/2021
</td>
`;

exports[`containers/LogFace extended renders correctly: tables 34`] = `
<td
  className="default-width"
>
  Đăk Tờ Re
</td>
`;

exports[`containers/LogFace extended renders correctly: tables 35`] = `
<td
  className="default-width"
>
  Pregnancy Detection
</td>
`;

exports[`containers/LogFace extended renders correctly: tables 36`] = `
<td
  className="default-width"
>
  Husna Hariz
</td>
`;

exports[`containers/LogFace extended renders correctly: tables 37`] = `
<td
  className="default-width"
>
  <Link
    to="#"
  >
    <LinkAnchor
      href="/pregnancy_log_face"
      navigate={[Function]}
    >
      <a
        href="/pregnancy_log_face"
        onClick={[Function]}
      >
        101C63
      </a>
    </LinkAnchor>
  </Link>
</td>
`;

exports[`containers/LogFace extended renders correctly: tables 38`] = `
<td
  className="small-width"
>
  34 years
</td>
`;

exports[`containers/LogFace extended renders correctly: tables 39`] = `
<td
  className="large-width"
>
  <ul>
    <li
      key="Name : BENT SENT  BRAND-0"
    >
      Name : BENT SENT  BRAND
    </li>
    <li
      key="Phone Number : 0912785510-1"
    >
      Phone Number : 0912785510
    </li>
    <li
      key="Health Insurance : KCO-2"
    >
      Health Insurance : KCO
    </li>
  </ul>
</td>
`;

exports[`containers/LogFace extended renders correctly: tables 40`] = `
<td
  className="default-width"
>
  <Link
    to="#"
  >
    <LinkAnchor
      href="/pregnancy_log_face"
      navigate={[Function]}
    >
      <a
        href="/pregnancy_log_face"
        onClick={[Function]}
      >
        <RiskColoring
          displayValue="Not Set"
          risk=" NULL"
        >
          <span
            className="badge"
            style={
              Object {
                "backgroundColor": "#6c757d",
              }
            }
          >
            <div>
              <p>
                Not Set
              </p>
            </div>
          </span>
        </RiskColoring>
      </a>
    </LinkAnchor>
  </Link>
</td>
`;
